--- a/app/src/main/res/layout/slide_layout.xml
+++ b/app/src/main/res/layout/slide_layout.xml
@@ -8,19 +8,19 @@
 
     <ImageView
         android:id="@+id/displayicon"
-        android:layout_width="183dp"
-        android:layout_height="177dp"
-        android:layout_marginTop="100dp"
+        android:layout_width="361dp"
+        android:layout_height="354dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/bowl" />
+        app:srcCompat="@drawable/home" />
 
     <TextView
         android:id="@+id/heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="12dp"
         android:text="Heading"
         android:textAllCaps="true"
         android:textColor="#FFFFFF"
@@ -35,7 +35,7 @@
         android:id="@+id/description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="8dp"
         android:paddingHorizontal="25dp"
         android:paddingVertical="20dp"
         android:text="Description"
@@ -43,7 +43,7 @@
         android:textColor="#cccccc"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/heading" />
 </androidx.constraintlayout.widget.ConstraintLayout>
